--- a/finance/nigeria-personal-income-tax-calculator.html
+++ b/finance/nigeria-personal-income-tax-calculator.html
@@ -570,6 +570,56 @@ Clear all changes
   <svg height="18" viewBox="0 -960 960 960" width="18" fill="currentColor"><path d="M280-40q-33 0-56.5-23.5T200-120v-720q0-33 23.5-56.5T280-920h280v200H280v480h400v-80h80v200q0 33-23.5 56.5T680-40H280Zm440-360L520-600l56-56 104 104v-288h80v288l104-104 56 56-200 200Z"></path></svg>
 </button>
     </div>
+    <section class="calculation-sources-wrap">
+    <div class="calculation-sources">
+      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-160q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q58 0 113.5 15T480-740v484q51-32 107-48t113-16q36 0 70.5 6t69.5 18v-480q15 5 29.5 10.5T898-752q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59Zm80-200v-380l200-200v400L560-360Zm-160 65v-396q-33-14-68.5-21.5T260-720q-37 0-72 7t-68 21v397q35-13 69.5-19t70.5-6q36 0 70.5 6t69.5 19Zm0 0v-396 396Z"/></svg>
+  <span>Based on</span>
+  <span class="number-of-source">1 source</span>
+  <svg id="open-sources-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
+</div>
+<!--<ol class="sources-list">
+  <li>Nigeria Tax Act, 2025</li>-->
+</ol>
+</section>
+<!-- TrustBox widget - Review Collector -->
+<div class="trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc" data-businessunit-id="68b84c14f868ed4fa17e1e99" data-style-height="52px" data-style-width="100%" data-token="3e8d7fb0-851f-45c0-8361-56a5ef23c924">
+  <a href="https://www.trustpilot.com/review/calclulo.com" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+<!-- End TrustBox widget -->
+<style>
+.calculation-sources-wrap{
+  max-width: 400px;
+   background: #fff;
+   padding: 15px;
+   width: 90%;
+   border-radius: 20px;
+   /*border: 1px solid #42445A1C;*/
+   margin-top: 1.5em;
+   font-family: "Young";
+   box-shadow: 0 2px 60px #464BFF03, 0 1px 15px #464BFF03;
+}
+  .calculation-sources{
+    display: flex;
+  align-items: center;       /* vertical center */
+  justify-content: flex-start; /* align to left */
+  gap: 4px;
+  /* make sure container has height so vertical centering is visible */
+   /* or min-height: 120px; or height: 100% depending on layout */
+  padding-left: 8px; /* optional spacing from the left edge */
+  box-sizing: border-box;
+   
+  }
+  .number-of-source{
+    font-family: lexend;
+    font-weight: 400;
+    font-size: .9em
+  }
+  .sources-list{
+    background: #464BFF0D;
+    border-radius: 17px;
+    padding: 40px;
+  }
+</style>
 
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
