--- a/agriculture.html
+++ b/agriculture.html
@@ -7,7 +7,9 @@
 
 <title>Agriculture Calculators</title>
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>
 
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
@@ -15,7 +17,6 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
 <meta name="description" content="Discover a fantastic collection of free agriculture calculators that are here to simplify your farming decisions.">
 
 <link rel="canonical" href="https://calclulo.com/agriculture">
